--- a/environment/envICD.yaml
+++ b/environment/envICD.yaml
@@ -48,4 +48,7 @@ dependencies:
   - vs2015_runtime=14.36.32532=h05e6639_17
   - wheel=0.41.2=pyhd8ed1ab_0
   - xz=5.2.6=h8d14728_0
+  - pip:
+      - wordcloud
+      - streamlit
 prefix: C:\Users\gilra\miniforge3\envs\ICD2425
